# shiinano-nonebot

./: .env.prod  .gitignore  README.md  pyproject.toml  pyvenv.cfg  ttt1
data/learning_chat/: learning_chat.db-shm  learning_chat.yml
data/setu4/: setu_perm_cfg.json
src/audio/ref_voice_tendo_aris/: 文本标注及情感参考.txt
xunsi/plugins/: auto_chat.py  calcu_dv.py  calcu_gadsm.py  calcu_nuke.py  deepseek_api.py  hello.py  shiina_sstv.py  today_length.py
xunsi/plugins/GADSM/: GADSM.h  GADSM.py  GADSM_for_bot.h
xunsi/plugins/GADSM/EPH/: 1_Mercury_SAU_SVU_P2000.TXT  2_Venus_SAU_SVU_P2000.TXT  3_Earth_SAU_SVU_P2000.TXT  4_Mars_SAU_SVU_P2000.TXT  5_Jupiter_SAU_SVU_P2000.TXT  6_Saturn_SAU_SVU_P2000.TXT  7_Uranus_SAU_SVU_P2000.TXT  8_Neptune_SAU_SVU_P2000.TXT
xunsi/plugins/GADSM/GADSM/: 20241017091901.csv
